# CalculateBondAnglesAtParticle

./: .gitignore  LICENSE  README.md  pyproject.toml
Examples/: CalculateBondAnglesAtParticleExample.ovito  CalculateBondAnglesAtParticleExample.py
src/CalculateBondAnglesAtParticle/: __init__.py
