[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CalculateBondAnglesAtParticle"
version = "1.0"
description = "Outputs the angles between all pairwise combinations of bonds at one particle."
keywords = ["ovito", "python-modifier"]
authors = [{name = "Constanze Kalcher", email = "kalcher@ovito.org"}]
maintainers = [{name = "OVITO GmbH", email = "support@ovito.org"}]
license = {text = "[[License]]"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1", 
    "numpy >= 1.22",
]

[project.urls]
repository = "https://github.com/ckalcher/CalculateBondAnglesAtParticle.git"

[project.entry-points.'OVITO.Modifier']
"Calculate bond angles at particle" = "CalculateBondAnglesAtParticle:CalculateBondAnglesAtParticle"

[tool.setuptools.packages.find]
where = ["src"]